addMenu
