# docs/swagger.json
@@ -827,12 +827,12 @@
                 "summary": "批量更改菜单状态",
                 "parameters": [
                     {
-                        "description": "菜单ids",
+                        "description": "设置ids和状态",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.IdsReq"
+                            "$ref": "#/definitions/request.BatchSetMenuParams"
                         }
                     }
                 ],
@@ -1675,6 +1675,20 @@
                 }
             }
         },
+        "request.BatchSetMenuParams": {
+            "type": "object",
+            "properties": {
+                "ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "show": {
+                    "type": "integer"
+                }
+            }
+        },
         "request.CasbinInReceive": {
             "type": "object",
             "properties": {
@@ -1730,17 +1744,6 @@
             "properties": {
                 "id": {
                     "type": "number"
-                }
-            }
-        },
-        "request.IdsReq": {
-            "type": "object",
-            "properties": {
-                "ids": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
                 }
             }
         },
